routes/jenkins-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-httproute
  namespace: cicd
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: jenkins
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jenkins
          port: 8080
