routes/sonar-qube-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-httproute
  namespace: sonarqube
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: sonarqube
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
